# access-mobile-client

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/libDacAuth/: libauthdac.c
app/src/main/cpp/libDacAuth/include/: libauthdac.h
app/src/main/cpp/libDacAuth/tinyembedded/: libdacClient.c  libdacServer.c  libdacUtils.c
app/src/main/cpp/libDacAuth/tinyembedded/include/: dacdbg.h  libdacUtils.h  libdac_internal.h
app/src/main/java/org/iota/access/: BaseActivity.java  BaseActivity.kt  BaseFragment.java  BaseFragment.kt  BaseObservableViewModel.java  BasePreferenceFragmentCompat.java  CommunicationFragment.java  MainActivity.kt  (+5 more)
app/src/main/res/anim/: enter_anim.xml  exit_anim.xml  pop_enter_anim.xml  pop_exit_anim.xml
app/src/main/res/drawable/: bg_spinner.xml  drawer_item_color_icon.xml  drawer_item_color_text.xml  edittext_background.xml  ic_action_settings.xml  ic_alarm_off.xml  ic_alarm_on.xml  ic_button_arrow_white.xml  ic_car_horn.xml  ic_car_trunk_closed.xml  ic_car_trunk_open.xml  ic_computer.xml  ic_delegate.xml  ic_delete.xml  ic_developer_board.xml  ic_edit.xml  ic_home.xml  ic_iota_main_24.xml  ic_iota_main_32.xml  ic_key.xml  ic_locked.xml  ic_log.xml  ic_logout.xml  ic_menu.xml  ic_more_options.xml  ic_multiple.xml  ic_phone.xml  ic_preview.xml  ic_refresh.xml  ic_save.xml  ic_start_engine.xml  ic_svg_xain_main.xml  ic_svg_xain_main_large.xml  ic_unlocked.xml  line.xml  rounded_rectangle.xml  separation_line.xml  side_nav_bar.xml  text_view_separation_line.xml
app/src/main/res/drawable-anydpi/: ic_add.xml  ic_add_circle.xml  ic_arrow_down.xml  ic_arrow_up.xml  ic_clock.xml  ic_map.xml  ic_speedometer.xml
app/src/main/res/layout/: activity_base.xml  activity_navigation_drawer.xml  activity_splash.xml  add_rule_list_item.xml  app_bar_main.xml  command_list_item.xml  dialog_progress.xml  fragment_command_editor.xml  fragment_command_list.xml  fragment_configure.xml  fragment_delegation.xml  fragment_delegation_list.xml  fragment_delegation_preview.xml  fragment_delegation_preview_json.xml  fragment_delegation_preview_structured.xml  fragment_delegation_rule.xml  fragment_log.xml  fragment_login.xml  fragment_register.xml  fragment_settings.xml  fragment_vehicle_info_list.xml  fragment_wallet.xml  item_json_element.xml  nav_header_main.xml  navigation_header.xml  recycler_view.xml  spinner_item.xml  spinner_item_dropdown.xml  spinner_item_with_icon.xml  user_delegate_list_item.xml  vehicle_info_list_item.xml  view_make_rule_location.xml  view_make_rule_speed_limit.xml  view_make_rule_time.xml  view_multiple_rule.xml  view_rule_location.xml  view_rule_speed_limit.xml  view_rule_time.xml
app/src/main/res/menu/: activity_main_drawer.xml  drawer_actions.xml  menu_delegation_rule.xml  menu_login.xml  menu_main.xml
app/src/main/res/navigation/: login_navigation.xml  main_navigation.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml  theme_iota.xml  theme_xain.xml
app/src/main/res/xml/: network_security_config.xml  preferences.xml
(+365 files in other folders)
